src/test/deca/context/valid/ex_arbre_enrichi.deca
// Description:
//    Teste l'affectation et la conversion int -> float.
//
// Resultats:
//    5.0
//
// Historique:
//    cree le 13/01/2023


class A{
   protected int x;
   int getX(){
      return x;
   }
   void setX(int x){
      this.x = x;
   }
}

{
   A a =  new A();
   a.setX(1);
   println("a.getX()=", a.getX());
}